[gd_scene load_steps=9 format=3 uid="uid://ljl6b5e3r6v2"]

[ext_resource type="Script" uid="uid://bcjcolf20tjs7" path="res://props/generator/generator.gd" id="1_eqda4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x6oqs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rn8di"]
radius = 30.0

[sub_resource type="CanvasTexture" id="CanvasTexture_eqda4"]

[sub_resource type="Gradient" id="Gradient_eqda4"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_x6oqs"]
gradient = SubResource("Gradient_eqda4")
width = 48
height = 48
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.80841124, 0.1682243)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqda4"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6oqs"]
bg_color = Color(0.75686276, 0.8, 0.2, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Generator" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_eqda4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x6oqs")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_rn8di")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("CanvasTexture_eqda4")

[node name="FuelTimer" type="Timer" parent="."]

[node name="GeneratorPointLight2D" type="PointLight2D" parent="."]
enabled = false
energy = 3.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_x6oqs")
texture_scale = 1.5

[node name="FuelBar" type="ProgressBar" parent="."]
offset_left = 10.0
offset_top = -13.0
offset_right = 14.0
offset_bottom = 14.0
theme_override_styles/background = SubResource("StyleBoxFlat_eqda4")
theme_override_styles/fill = SubResource("StyleBoxFlat_x6oqs")
value = 100.0
fill_mode = 3
show_percentage = false
